# psychopy-pixx

./: .gitignore  .pyproject.toml.kate-swp  README.md  pyproject.toml
.github/workflows/: publish.yaml
components/: __init__.py
components/responsepixx/: __init__.py
components/viewpixx/: __init__.py
example_experiment/: newtest.psyexp
examples/: show_high_lum_gradient.py
paper/: paper.bib  paper.md
psychopy_pixx/: __init__.py
psychopy_pixx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
psychopy_pixx/calibration/: _gamma_fit.py  _s470_photometer.py  calibration.py  monitor_center.py  photometer.py
psychopy_pixx/components/responsepixx/: __init__.py
psychopy_pixx/devices/: __init__.py  responsepixx.py  viewpixx.py
psychopy_pixx/devices/shaders/: c48_frag.glsl  m16_frag.glsl
psychopy_pixx/routines/viewpixx/: __init__.py
utils/: README.md  set-psychopy-mode  set-ptb-mode  sudoers-ptb-psychopy
