[tool.poetry]
name = "psychopy-pixx"
version = "0.0.0"
description = "Psychopy plugin for high-bit luminance and VPixx devices"
readme = "README.md"
repository = "https://github.com/wichmann-lab/psychopy-pixx"
authors = ["David-Elias Kuenstle <david-elias.kuenstle@uni-tuebingen.de>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
pixxcalibrate = "psychopy_pixx.calibration.calibration:calibration_routine_cli"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"