[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["",]

[tool.setuptools.package-data]
"*" = ["*.png",]

[project]
name = "psychopy-pixx"
version = "0.0.0"

[project.entry-points."psychopy.experiment.components"]
ResponsepixxComponent = "components:ResponsepixxComponent"
